--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "my-remix-app",
+  "name": "mindsweep-ai",
   "private": true,
   "sideEffects": false,
   "type": "module",
+  "version": "1.0.0",
+  "description": "A GTD Clarify Companion to transform messy thoughts into organized GTD elements",
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
@@ -20,7 +22,8 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.16.2",
-    "@types/react": "^18.2.20",
+    "@types/node": "^22.13.11",
+    "@types/react": "^18.3.19",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
